# DearQOI

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  RELEASE_NOTES.md
.github/workflows/: build.yml  hello.yml  pull_request.yml
dagger/: Dockerfile  go.mod  main.go
docker/: Dockerfile  build.sh
images/: baw_logo.qoi  baw_team.qoi
presentation/: presentation.odp
scripts/: create-release.sh
src/: Logger.h  MainLoop.h  MainWindow.cpp  MainWindow.h  QoiView.cpp  QoiView.h  main.cpp
